# Capstone2021

./: README.md
VinfenClientPhoneTool/: pyproject.toml  vinfen_config.yaml
VinfenClientPhoneTool/tests/: test_vinfenclientphonetool.py
VinfenClientPhoneTool/vinfenclientphonetool/: constants.py  myapp.py  test_data.csv
VinfenClientPhoneTool/vinfenclientphonetool/Dashboard/: Dashboard.py  utils.py
VinfenClientPhoneTool/vinfenclientphonetool/Database/: CreateDB.py  PopulateDB.py  PopulateStaff.py  PopulateUsageReport.py  Queries.py  utils.py
VinfenClientPhoneTool/vinfenclientphonetool/tabs/: BarChart.py  RadarChart.py
