[tool.poetry]
name = "VinfenClientPhoneTool"
version = "0.1.0"
description = ""
authors = ["Katie Nerney <katienerney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
bokeh = "^2.0"
pandas = "^1.2.3"
mysql-connector-python = "^8.0.23"
SQLAlchemy = "^1.4.2"
PyYAML = "^5.4.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
createdb = "vinfenclientphonetool.Database.CreateDB:main"
populateusage = "vinfenclientphonetool.Database.PopulateUsageReport:main"
populatestaff = "vinfenclientphonetool.Database.PopulateStaff:main"
test = "vinfenclientphonetool.test_space:main"
